Banner part complete

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New year</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>B9-A1 New year new mission</title>
+    <!-- Google font links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Style.css file link -->
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+
+    <header>
+        <!-- Banner part start -->
+        <div id="banner">
+            <div class="container">
+                <div class="banner-text">
+                    <h2>Happy New Year</h2>
+                    <h1>New Year Party Celebration</h1>
+                </div>
+                <div class="banner-image-overlay"></div>
+            </div>
+        </div>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+  </body>
 </html>
