All categories part complete

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <header>
         <!-- Banner part start -->
+       <section id="banner-head">
         <div id="banner">
             <div class="container">
                 <div class="banner-text">
@@ -27,9 +28,21 @@
                 <div class="banner-image-overlay"></div>
             </div>
         </div>
+       </section>
     </header>
 
-    <main></main>
+    <main>
+        <section id="all-cate">
+            <div class="all-offer">
+                <h3>65% OFF</h3>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h4>ALL CATEGORIES</h4>
+            </div>
+            <div class="image">
+                <img src="resources/New Year Photo.png" alt="">
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
   </body>
