Welcome part complete

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </header>
 
     <main>
+        <!-- All categories part start -->
         <section id="all-cate">
             <div class="all-offer">
                 <h3>65% OFF</h3>
@@ -40,6 +41,23 @@
             </div>
             <div class="image">
                 <img src="resources/New Year Photo.png" alt="">
+            </div>
+        </section>
+
+        <section id="Welcome">
+            <!-- Welcome party start -->
+            <div class="container">
+                <div class="welcome-display">
+                    <div class="welcome-text">
+                        <h3>Welcome to midnight party</h3>
+                        <p>We're thrilled to have you with us. Get ready for a memorable time and a great experience. We're just a message away if you need anything</p>
+                        <div class="btn"><a href="#">Join Now</a></div>
+                    </div>
+                    <div class="welcome-img">
+                        <img src="resources/Group 70.png" alt="">
+                    </div>
+                </div>
+                <div class="overlay"></div>
             </div>
         </section>
     </main>
