--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@
                 <div class="overlay"></div>
             </div>
         </section>
+
+        <!-- Join or contact party start -->
+        <section id="join-party">
+            <div class="container">
+                <div class="party-text">
+                    <p>
+                        <span>Place:</span> New Park Hotel<br>
+                        <span>Date:</span> 31 December Night 2023<br>
+                        <span>Time:</span> Evening 7.30 pm to 12.30 am
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
