comming soon info section added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,28 @@
                 </div>
             </div>
         </section>
+        <!-- Comming soon part start -->
+        <section id="new-offer">
+            <div class="container">
+                <div class="comming-soon">
+                    <div class="left">
+                        <h3>NEW BEST OFFER</h3>
+                        <h2>Coming Soon</h2>
+                        <p>Get the best deal of the season for a limited time, enjoy up to 50% off on select items. Don't miss out on this incredible opportunity to save big. </p>
+                    </div>
+                    <div class="middle">
+                        <div class="image">
+                            <img src="resources/Ellipse 1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="right">
+                        <h3>2024</h3>
+                        <p>Wishing you a joyful and prosperous New Year filled with love, laughter, and success.</p>
+                        <img src="resources/Group 96.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
