--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="left">
                         <h3>NEW BEST OFFER</h3>
                         <h2>Coming Soon</h2>
-                        <p>Get the best deal of the season for a limited time, enjoy up to 50% off on select items. Don't miss out on this incredible opportunity to save big. </p>
+                        <p>Get the best deal of the season for a limited time, enjoy up to 50% off on select items. Don't miss out on this opportunity. </p>
                     </div>
                     <div class="middle">
                         <div class="image">
@@ -93,6 +93,34 @@
                         <img src="resources/Group 96.png" alt="">
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- Holiday Sales part -->
+        <section id="holiday">
+            <div class="container-holiday">
+                <div class="holiday-text">
+                    <h4>WHAT IS FUNCTIONAL</h4>
+                    <h2>Holidays <span>Sale 50%</span></h2>
+                    <p>Don't miss out on our exclusive holiday sales offer!
+                         Get up to 50% off on selected items.
+                        Shop for the perfect gifts for your loved ones.
+                       
+                         Limited time offer, so hurry and grab your favorites.
+                        Visit our website or store today to take advantage of these incredible savings!</p>
+                </div>
+                <div class="inner-holiday">
+                    <div class="holiday-left">
+                        <img src="resources/Group 75.png" alt="">
+                    </div>
+                    <div class="holiday-right">
+                        <img src="resources/Rectangle 1.png" alt="">
+                        <img class="off50" src="resources/Group 44.png" alt="">
+                    </div>
+                </div>
+                <!-- <div class="bottom-image">
+                    <img src="resources/Rectangle 2.png" alt="">
+                </div> -->
+                <div class="bottom-red-bg"></div>
             </div>
         </section>
     </main>
