Portfolio section added

--- a/index.html
+++ b/index.html
@@ -117,10 +117,25 @@
                         <img class="off50" src="resources/Group 44.png" alt="">
                     </div>
                 </div>
-                <!-- <div class="bottom-image">
-                    <img src="resources/Rectangle 2.png" alt="">
-                </div> -->
                 <div class="bottom-red-bg"></div>
+            </div>
+        </section>
+        <!-- Portfolio part start -->
+        <section id="portfolio">
+            <div class="portfolio-container">
+                <div class="port-text">
+                    <h4>THE BEST GIFTS</h4>
+                    <h3>Our Awesome Portfolio</h3>
+                    <p>Portfolio showcases ability to create compelling online shopping experiences and achieve measurable business growth..</p>
+                </div>
+                <div class="port-gallery">
+                    <img src="resources/Rectangle 3.png" alt="">
+                    <img src="resources/Rectangle 4.png" alt="">
+                    <img src="resources/Rectangle 5.png" alt="">
+                    <img src="resources/Rectangle 6.png" alt="">
+                    <img src="resources/Rectangle 7.png" alt="">
+                    <img src="resources/Rectangle 8.png" alt="">
+                </div>
             </div>
         </section>
     </main>
