Subscribe section added

--- a/index.html
+++ b/index.html
@@ -138,6 +138,21 @@
                 </div>
             </div>
         </section>
+        <!-- Subscribe part start -->
+        <section>
+            <div class="sub-container">
+                <div class="subscribe">
+                    <img src="resources/Group 61.png" alt="">
+                    <h3>Subscribe Newsletter</h3>
+                    <p>By subscribing, you'll receive the latest updates, exclusive offers, and exciting news delivered straight to your inbox. Don't miss out - subscribe now and stay in the loop!</p>
+                </div>
+                <form action="">
+                    <input type="text" name="" placeholder="user@gmail" id=""><br>
+                    <!-- <input type="button" name="button" placeholder="Subscribe" id="" > -->
+                    <a href="#" class="button">Subscribe</a>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
