Footer section added

--- a/index.html
+++ b/index.html
@@ -155,6 +155,34 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <!-- Footer part Start -->
+        <div class="foot-container">
+            <div class="footer-text">
+                <div class="text-left">
+                    <p>44, Big Building Roosevelt Street
+                        Beach Gardens Florida 33410</p>
+                </div>
+                <div class="text-right">
+                    <div class="display"><img src="resources/Call.png" alt=""><p>+00 123 584 124</p></div>
+                
+                    <br>
+                    <div class="display"><img src="resources/Website.png" alt=""><p>www.website.com</p></div>
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="footer-social">
+                <img src="resources/Facebook.png" alt="">
+                <img src="resources/Instagram.png" alt="">
+                <img src="resources/Twitter.png" alt="">
+                <img src="resources/Linkedin.png" alt="">
+            </div>
+            <div class="line"></div>
+            <div class="footer-copywrite">
+                <p>2017, All Rights Reserved.</p>
+                <p>Unsubscribe</p>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
