Final revised for production

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             </div>
         </section>
 
+        <!-- Welcome party start -->
         <section id="Welcome">
-            <!-- Welcome party start -->
             <div class="container">
                 <div class="welcome-display">
                     <div class="welcome-text">
                         <h3>Welcome to midnight party</h3>
-                        <p>We're thrilled to have you with us. Get ready for a memorable time and a great experience. We're just a message away if you need anything</p>
+                        <p>We're thrilled to have you with us. Get ready for a memorable time and a great experience. We're just a message away if you need </p>
                         <div class="btn"><a href="#">Join Now</a></div>
                     </div>
                     <div class="welcome-img">
@@ -95,6 +95,7 @@
                 </div>
             </div>
         </section>
+        
         <!-- Holiday Sales part -->
         <section id="holiday">
             <div class="container-holiday">
@@ -147,8 +148,7 @@
                     <p>By subscribing, you'll receive the latest updates, exclusive offers, and exciting news delivered straight to your inbox. Don't miss out - subscribe now and stay in the loop!</p>
                 </div>
                 <form action="">
-                    <input type="text" name="" placeholder="user@gmail" id=""><br>
-                    <!-- <input type="button" name="button" placeholder="Subscribe" id="" > -->
+                    <input type="text" name="" placeholder="user@gmail" id="">
                     <a href="#" class="button">Subscribe</a>
                 </form>
             </div>
@@ -164,19 +164,21 @@
                         Beach Gardens Florida 33410</p>
                 </div>
                 <div class="text-right">
-                    <div class="display"><img src="resources/Call.png" alt=""><p>+00 123 584 124</p></div>
+                    <div class="display"><img src="resources/Call.png" alt=""><a href="#">+00 123 584 124</a></div>
                 
                     <br>
-                    <div class="display"><img src="resources/Website.png" alt=""><p>www.website.com</p></div>
+                    <div class="display"><img src="resources/Website.png" alt=""><a href="#">www.website.com</a></div>
                 </div>
             </div>
             <div class="line"></div>
+            <br>
             <div class="footer-social">
                 <img src="resources/Facebook.png" alt="">
                 <img src="resources/Instagram.png" alt="">
                 <img src="resources/Twitter.png" alt="">
                 <img src="resources/Linkedin.png" alt="">
             </div>
+            <br>
             <div class="line"></div>
             <div class="footer-copywrite">
                 <p>2017, All Rights Reserved.</p>
